--- a/index.html
+++ b/index.html
@@ -29,24 +29,25 @@
       I spend my time creating cashier-free restaurants @ <a href="https://marblekiosk.com/">Marble</a>,
       <br>
       <br>
-      supplying face shields to hospitals @ <a href="https://covid.crashspace.org/">LA Makers United</a>,
+      supplying face shields to hospitals in Los Angeles via @ <a href="https://covid.crashspace.org/">Crash Space</a>,
       <br>
       <br>
-      and teaching underpriveleged kids to code @ <a href="https://hacker.fund/">Hacker Fund</a>.
+      and teaching underpriveleged kids how to code @ <a href="https://hacker.fund/">Hacker Fund</a>.
       <br>
       <br>
       <br>
       <br>
-      Previously, I worked with the SEC and FINRA to make startup investment available to your average Joe @ <a href="https://slice.capital/">Slice Capital</a>(acquired),
+      Previously, I worked with the SEC and FINRA to make startup investment accessible to the average Joe @ <a href="https://slice.capital/">Slice Capital</a> (acquired),
       <br>
       <br>
-      taught kids how to code without getting them into life-long debt @ <a href="https://makeschool.com">Make School</a>,
+      taught kids how to code without getting themselves into life-long debt @ <a href="https://makeschool.com">Make School</a>,
       <br>
       <br>
-      and acquired copious amounts of debt while mixing chemicals at Penn State.
+      and played with chemicals at UPenn and Penn State.
   </p>
   <br>
-  <p style="padding-top:15px;padding-left:15px;font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">I say things on <a href="https://twitter.com/danstepanov/">Twitter</a>,
+  <p style="padding-top:15px;padding-left:15px;font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">
+    I say things on <a href="https://twitter.com/danstepanov/">Twitter</a>,
     <br>
     <br>
     and occasionally visit <a href="https://www.linkedin.com/in/danstepanov/">LinkedIn</a>.
