--- a/connect/index.html
+++ b/connect/index.html
@@ -1,7 +1,13 @@
 <html>
   <head>
+    <title>Dan Stepanov</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+    <link id="favicon" rel="icon" type="image/png" sizes="64x64" href="./favicon.png">
     <meta property="og:image" content="/img/simple.png" />
-    <meta property="og:image" content="http://danstepanov.com/img/simple.png" />
     <meta property="og:image:secure_url" content="https://danstepanov.com/img/simple.png" />
     <meta property="og:image:type" content="image/png" />
     <meta property="og:image:width" content="1200" />
@@ -11,7 +17,6 @@
     <meta property="og:title" content="Dan Stepanov" />
     <meta property="og:description" content="My crime is curiosity." />
     <script type="text/javascript">
-      mixpanel.track('Open Connect Link');
       function load() {
         window.location.href = 'https://calendly.com/fullcalendar';
       }
