--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       Previously, I worked with the SEC and FINRA to make startup investment accessible to the average Joe @ <a href="https://slice.capital/">Slice Capital</a> (acquired),
       <br>
       <br>
-      taught kids how to code without getting themselves into life-long debt @ <a href="https://makeschool.com">Make School</a>,
+      taught students how to code without getting themselves into life-long debt @ <a href="https://makeschool.com">Make School</a>,
       <br>
       <br>
       and played with chemicals at UPenn and Penn State.
@@ -59,7 +59,7 @@
     I say things on <a href="https://twitter.com/danstepanov/">Twitter</a>,
     <br>
     <br>
-    and occasionally visit <a href="https://www.linkedin.com/in/danstepanov/">LinkedIn</a>.
+    and occasionally check <a href="https://www.linkedin.com/in/danstepanov/">LinkedIn</a>.
   </p>
 	</body>	
 </html>
