--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       I spend my time creating cashier-free restaurants @ <a href="https://marblekiosk.com/">Marble</a>,
       <br>
       <br>
-      supplying face shields to hospitals in Los Angeles via @ <a href="https://covid.crashspace.org/">Crash Space</a>,
+      supplying face shields to hospitals in Los Angeles @ <a href="https://covid.crashspace.org/">Crash Space</a>,
       <br>
       <br>
       and teaching underpriveleged kids how to code @ <a href="https://hacker.fund/">Hacker Fund</a>.
