--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
     <link id="favicon" rel="icon" type="image/png" sizes="64x64" href="./favicon.png">
-    <meta property="og:image" content="/img/simple.png" />
+    <meta property="og:image" content="https://danstepanov.com/img/simple.png" />
     <meta property="og:image:secure_url" content="https://danstepanov.com/img/simple.png" />
     <meta property="og:image:type" content="image/png" />
     <meta property="og:image:width" content="1200" />
