--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       supplying face shields to hospitals in Los Angeles @ <a href="https://covid.crashspace.org/">Crash Space</a>,
       <br>
       <br>
-      and teaching underpriveleged kids how to code @ <a href="https://hacker.fund/">Hacker Fund</a>.
+      and teaching underpriviledged kids how to code @ <a href="https://hacker.fund/">Hacker Fund</a>.
       <br>
       <br>
       <br>
