more spelling error

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       taught students how to code without getting themselves into life-long debt @ <a href="https://makeschool.com">Make School</a>,
       <br>
       <br>
-      and played with chemicals at UPenn and Penn State.
+      and played with chemicals at the University of Pennsylvania and Penn State University.
   </p>
   <br>
   <p style="padding-top:15px;padding-left:15px;font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">
