--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     Oh hai,
     <br>
     <br>
-      I spend my time creating cashier-free restaurants @ <a href="https://marblekiosk.com/">Marble</a>,
+      I spend my time creating cashier-free restaurants @ <a href="https://marblekiosk.com/">Marble</a> (YC S19),
       <br>
       <br>
       supplying face shields to hospitals in Los Angeles @ <a href="https://covid.crashspace.org/">Crash Space</a>,
@@ -49,7 +49,7 @@
       Previously, I worked with the SEC and FINRA to make startup investment accessible to the average Joe @ <a href="https://slice.capital/">Slice Capital</a> (acquired),
       <br>
       <br>
-      taught students how to code without getting themselves into life-long debt @ <a href="https://makeschool.com">Make School</a>,
+      taught students how to code without getting themselves into life-long debt @ <a href="https://makeschool.com">Make School</a> (YC W12),
       <br>
       <br>
       and played with chemicals at the University of Pennsylvania and Penn State University.
