--- a/connect/index.html
+++ b/connect/index.html
@@ -13,8 +13,8 @@
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="627" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="danstepanov.com" />
-    <meta property="og:title" content="Dan Stepanov" />
+    <meta property="og:url" content="danstepanov.com/connect" />
+    <meta property="og:title" content="Dan Stepanov's Calendar" />
     <meta property="og:description" content="My crime is curiosity." />
     <script type="text/javascript">
       function load() {
