update meeting titles

--- a/meet/index.html
+++ b/meet/index.html
@@ -14,7 +14,7 @@
     <meta property="og:image:height" content="627" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="danstepanov.com/meet" />
-    <meta property="og:title" content="Dan Stepanov's Calendar" />
+    <meta property="og:title" content="Dan's Calendar" />
     <meta property="og:description" content="My crime is curiosity." />
     <script type="text/javascript">
       function load() {
