--- a/index.html
+++ b/index.html
@@ -61,5 +61,6 @@
     <br>
     and occasionally check <a href="https://www.linkedin.com/in/danstepanov/">LinkedIn</a>.
   </p>
+  <img style="position: fixed;right: 0px;bottom: -5px; height: 20%;" src="./img/tree.png" />
 	</body>	
 </html>
